// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Shared Components|Header/ContextHeader Default 1`] = `
.c0 {
  display: none;
}

.c1 {
  margin-right: 20px;
  overflow: hidden;
}

.c2 {
  color: #FFF;
}

.c3 {
  color: #FFF;
}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:768px) {

}

@media (min-width:768px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {
  .c0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    margin: 60px 0 40px 0;
    min-height: 63px;
  }
}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:768px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:480px) {

}

@media (min-width:768px) {

}

@media (min-width:768px) {

}

@media (min-width:768px) {

}

@media (min-width:768px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

<div
  style={
    Object {
      "minHeight": "100vh",
    }
  }
>
  <style>
    
  body {
    color: #FFF;
    background-color: #000;
  }

  </style>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <h2
        className="c2"
        id="desktopHeaderTitle"
        style={
          Object {
            "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": "24px",
            "fontWeight": 100,
            "margin": 0,
          }
        }
      >
        Projects
      </h2>
      <h1
        className="c3"
        id="desktopHeaderSubtitle"
        style={
          Object {
            "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": "24px",
            "fontWeight": 600,
            "letterSpacing": "-0.12px",
            "lineHight": 1.25,
            "margin": 0,
          }
        }
      >
        Overviews
      </h1>
    </div>
    <div
      className=""
    />
  </div>
</div>
`;

exports[`Storyshots Shared Components|Header/ContextHeader with content 1`] = `
.c0 {
  display: none;
}

.c1 {
  margin-right: 20px;
  overflow: hidden;
}

.c2 {
  color: #FFF;
}

.c3 {
  color: #FFF;
}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:768px) {

}

@media (min-width:768px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {
  .c4 {
    display: block;
  }
}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {
  .c0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    margin: 60px 0 40px 0;
    min-height: 63px;
  }
}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:768px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:480px) {

}

@media (min-width:768px) {

}

@media (min-width:768px) {

}

@media (min-width:768px) {

}

@media (min-width:768px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

<div
  style={
    Object {
      "minHeight": "100vh",
    }
  }
>
  <style>
    
  body {
    color: #FFF;
    background-color: #000;
  }

  </style>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <h2
        className="c2"
        id="desktopHeaderTitle"
        style={
          Object {
            "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": "24px",
            "fontWeight": 100,
            "margin": 0,
          }
        }
      >
        Projects
      </h2>
      <h1
        className="c3"
        id="desktopHeaderSubtitle"
        style={
          Object {
            "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": "24px",
            "fontWeight": 600,
            "letterSpacing": "-0.12px",
            "lineHight": 1.25,
            "margin": 0,
          }
        }
      >
        Overviews
      </h1>
    </div>
    <div
      className=""
    >
      <div
        className="c4"
      >
        <button
          disabled={false}
          style={
            Object {
              "backgroundColor": "#FFF",
              "border": "none",
              "borderRadius": "48px",
              "color": "#000",
              "cursor": "pointer",
              "display": "inline-block",
              "fill": "#FFF",
              "fontSize": "18px",
              "height": "60px",
              "margin": "0",
              "minHeight": "48px",
              "outline": "none",
              "padding": "0",
              "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
              "width": "60px",
            }
          }
        >
          <svg
            style={
              Object {
                "fill": "#000",
                "height": "60px",
                "shapeRendering": "crispEdges",
                "width": "60px",
              }
            }
            viewBox="0 0 60 60"
          >
            <path
              d="M32 15v13h13v4H32v13h-4V32H15v-4h13V15h4z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Shared Components|Header/ContextHeader with long text 1`] = `
.c0 {
  display: none;
}

.c1 {
  margin-right: 20px;
  overflow: hidden;
}

.c2 {
  color: #FFF;
}

.c3 {
  color: #FFF;
}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:768px) {

}

@media (min-width:768px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {
  .c4 {
    display: block;
  }
}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {
  .c0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
    -webkit-align-items: center;
    -webkit-box-align: center;
    -ms-flex-align: center;
    align-items: center;
    margin: 60px 0 40px 0;
    min-height: 63px;
  }
}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:768px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:480px) {

}

@media (min-width:768px) {

}

@media (min-width:768px) {

}

@media (min-width:768px) {

}

@media (min-width:768px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

@media (min-width:1050px) {

}

<div
  style={
    Object {
      "minHeight": "100vh",
    }
  }
>
  <style>
    
  body {
    color: #FFF;
    background-color: #000;
  }

  </style>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      <h2
        className="c2"
        id="desktopHeaderTitle"
        style={
          Object {
            "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": "24px",
            "fontWeight": 100,
            "margin": 0,
          }
        }
      >
        
  Mauris egestas arcu nec diam consectetur vulputate.
  Mauris rhoncus a massa in ultricies. In vel accumsan tortor.
  Donec suscipit commodo enim. Suspendisse nibh odio

      </h2>
      <h1
        className="c3"
        id="desktopHeaderSubtitle"
        style={
          Object {
            "fontFamily": "Inter, \\"Helvetica Neue\\", Helvetica, Arial, sans-serif",
            "fontSize": "24px",
            "fontWeight": 600,
            "letterSpacing": "-0.12px",
            "lineHight": 1.25,
            "margin": 0,
          }
        }
      >
        
  Mauris egestas arcu nec diam consectetur vulputate.
  Mauris rhoncus a massa in ultricies. In vel accumsan tortor.
  Donec suscipit commodo enim. Suspendisse nibh odio

      </h1>
    </div>
    <div
      className=""
    >
      <div
        className="c4"
      >
        <button
          disabled={false}
          style={
            Object {
              "backgroundColor": "#FFF",
              "border": "none",
              "borderRadius": "48px",
              "color": "#000",
              "cursor": "pointer",
              "display": "inline-block",
              "fill": "#FFF",
              "fontSize": "18px",
              "height": "60px",
              "margin": "0",
              "minHeight": "48px",
              "outline": "none",
              "padding": "0",
              "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
              "width": "60px",
            }
          }
        >
          <svg
            style={
              Object {
                "fill": "#000",
                "height": "60px",
                "shapeRendering": "crispEdges",
                "width": "60px",
              }
            }
            viewBox="0 0 60 60"
          >
            <path
              d="M32 15v13h13v4H32v13h-4V32H15v-4h13V15h4z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;
